--- a/LFProject/LF.SerialCommunication.Project/LF.SerialCommunication.Project.csproj
+++ b/LFProject/LF.SerialCommunication.Project/LF.SerialCommunication.Project.csproj
@@ -85,6 +85,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -94,6 +95,12 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Libraries\LF.WPFStyle\LF.WPFStyle.csproj">
+      <Project>{423e5044-d286-4a72-9b66-aad972385638}</Project>
+      <Name>LF.WPFStyle</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
