--- a/LFProject/Libraries/LF.SerialCommunication/LF.SerialCommunication.csproj
+++ b/LFProject/Libraries/LF.SerialCommunication/LF.SerialCommunication.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LFLink.cs" />
     <Compile Include="LFSerialPort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
