UAV库的原理分析

--- a/LFProject/Libraries/LF.UnmannedAerialVehicle/LF.UnmannedAerialVehicle.csproj
+++ b/LFProject/Libraries/LF.UnmannedAerialVehicle/LF.UnmannedAerialVehicle.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LFDrone.cs" />
+    <Compile Include="LFPidController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
