--- a/LF.Project/Lib.Others/LF.FictionWorld/LF.FictionWorld.csproj
+++ b/LF.Project/Lib.Others/LF.FictionWorld/LF.FictionWorld.csproj
@@ -44,14 +44,21 @@
     <Compile Include="Data\01History\LFEvent.cs" />
     <Compile Include="Data\02Item\LFItem.cs" />
     <Compile Include="Data\02Item\LFItemList.cs" />
+    <Compile Include="Data\03Book\LFLevel.cs" />
+    <Compile Include="Data\03Book\LFLevelList.cs" />
     <Compile Include="Info\LFCalendar.cs" />
     <Compile Include="Info\LFCalendarInfo.cs" />
     <Compile Include="Info\LFCalendarInfoList.cs" />
     <Compile Include="Info\LFDate.cs" />
     <Compile Include="Info\LFMoon.cs" />
-    <Compile Include="Setting\LFAttribute.cs" />
-    <Compile Include="Setting\LFType.cs" />
-    <Compile Include="Setting\LFTypeList.cs" />
+    <Compile Include="Data\03Book\LFBook.cs" />
+    <Compile Include="Data\03Book\LFBookList.cs" />
+    <Compile Include="Data\03Book\LFSkill.cs" />
+    <Compile Include="Data\03Book\LFSkillList.cs" />
+    <Compile Include="Config\LFAttribute.cs" />
+    <Compile Include="Config\LFType.cs" />
+    <Compile Include="Config\LFTypeList.cs" />
+    <Compile Include="Data\LFRole.cs" />
     <Compile Include="World\LFWorldSetting.cs" />
     <Compile Include="World\LFWorldData.cs" />
     <Compile Include="World\LFWorldInfo.cs" />
