--- a/LF/Libraries/Academics/LF.AircraftDesign/LF.AircraftDesign.csproj
+++ b/LF/Libraries/Academics/LF.AircraftDesign/LF.AircraftDesign.csproj
@@ -41,11 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LFConfig.cs" />
+    <Compile Include="LFGlobal.cs" />
+    <Compile Include="LFWeight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NewFolder1\" />
+    <ProjectReference Include="..\..\Common\LF\LF.csproj">
+      <Project>{9feda7e4-f210-4864-9b05-5f93086b926e}</Project>
+      <Name>LF</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
