--- a/LF/Libraries/Common/LF/LF.csproj
+++ b/LF/Libraries/Common/LF/LF.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="Constant.cs" />
     <Compile Include="LF.cs" />
+    <Compile Include="LFType.cs" />
+    <Compile Include="LFTypeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sorting.cs" />
+    <Compile Include="LFSort.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
